--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/css/datatables.min.css">
     <link rel="stylesheet" href="/assets/js/plugin/jquery.modal/jquery.modal.min.css">
     <link rel="stylesheet" href="/assets/js/plugin/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="/assets/js/plugin/codemirror/theme/darcula.css">
     <link rel="stylesheet" href="/assets/js/plugin/froala/froala_editor.pkgd.css">
     <link rel="stylesheet" href="/assets/js/plugin/froala/froala_style.css">
     <link rel="stylesheet" href="/assets/css/atlantis.css">
