--- a/src/Template/cup/docs/dev/api.twig
+++ b/src/Template/cup/docs/dev/api.twig
@@ -14,6 +14,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-5 col-md-4">
                     <div class="nav flex-column nav-pills nav-secondary" id="pills-tab" role="tablist">
+                        <a class="nav-link" id="v-api-tab-user" data-toggle="pill" href="#v-api-user">User</a>
                         <a class="nav-link" id="v-api-tab-file" data-toggle="pill" href="#v-api-file">File</a>
                         <a class="nav-link" id="v-api-tab-user" data-toggle="pill" href="#v-api-publication">Publication</a>
                         <a class="nav-link" id="v-api-tab-page" data-toggle="pill" href="#v-api-catalog">Catalog</a>
@@ -21,6 +22,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-8 mt-5 mt-sm-0">
                     <div class="tab-content">
+                        <div class="tab-pane fade" id="v-api-user">
+                            {% include 'cup/docs/dev/api/user.twig' %}
+                        </div>
                         <div class="tab-pane fade" id="v-api-file">
                             {% include 'cup/docs/dev/api/file.twig' %}
                         </div>
