add task logs and fix tm task name

--- a/src/Template/cup/trademaster.twig
+++ b/src/Template/cup/trademaster.twig
@@ -11,7 +11,7 @@
             <div class="quick-actions-scroll scrollbar-outer">
                 <div class="quick-actions-items">
                     <form action="/cup/task/run" method="post" class="row m-0">
-                        <button type="submit" name="task" value="\App\Domain\Tasks\TradeMaster\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
+                        <button type="submit" name="task" value="App\Domain\Tasks\TradeMaster\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
                             <div class="quick-actions-item">
                                 <i class="fas fa-store"></i>
                                 <span class="text">Обновить каталог</span>
