fix integration[trademaster_cache_folder] value

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -623,7 +623,7 @@
                                                     'type': 'text',
                                                     'name': 'integration[trademaster_cache_folder]',
                                                     'args': {
-                                                        'value': '0',
+                                                        'value': '',
                                                     }
                                                 } %}
 
