функция получения списка товаров по uuid категории

--- a/src/Template/cup/docs/dev/twig.twig
+++ b/src/Template/cup/docs/dev/twig.twig
@@ -68,7 +68,8 @@
             <ul>
                 <li><b>catalog_category()</b> - возвращает список категорий товаров</li>
                 <li><b>catalog_breadcrumb(\App\Domain\Entities\Catalog\Category $category = null)</b> - возвращает список родительских категорий для выбранной категории</li>
-                <li><b>catalog_product($unique = null, $order = [], $limit = 10, $offset = null)</b> - возвращает список товаров (ищет по uuid, address)</li>
+                <li><b>catalog_products($category_uuid, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по category)</li>
+                <li><b>catalog_product($unique = null, $order = [], $limit = 10, $offset = null)</b> - возвращает товар или список товаров (ищет по uuid, address)</li>
                 <li><b>catalog_product_view(\Ramsey\Uuid\UuidInterface $uuid = null, $limit = 10)</b> - сохраняет переданный в аргумент uuid товара, если null возвращает список товаров</li>
                 <li><b>catalog_order($unique)</b> - получение заказа</li>
             </ul>
