добавлено поле "убрать" в корзину по-умолчанию

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -20,6 +20,7 @@
                             {label: '+', attr: 'increment', view: null, text: null, class: null, style: 'width: 10%; text-align: center;'},
                             {label: 'Стоимость', attr: 'price', view: null, text: null, class: null, style: 'text-align: right;'},
                             {label: 'Всего', attr: 'total', view: null, text: null, class: null, style: 'text-align: right;'},
+                            {label: 'Убрать', attr: 'remove', view: null, text: null, class: null, style: 'text-align: center;'},
                         ],
                         style: 'table', // div
                         class: '', // table class
