--- a/theme/default/catalog.cart.twig
+++ b/theme/default/catalog.cart.twig
@@ -23,7 +23,8 @@
 
     <style>
         [data-catalog-cart] [data-attr="increment"] button,
-        [data-catalog-cart] [data-attr="decrement"] button {
+        [data-catalog-cart] [data-attr="decrement"] button,
+        [data-catalog-cart] [data-attr="remove"] button {
             display: inline-block;
             border: none;
             font-size: 14px;
