--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -243,7 +243,7 @@
                     }
                     case 'thead': {
                         switch (this.options.cart.style) {
-                            case 'table': selector = '<tr>'; break;
+                            case 'table': selector = '<thead>'; break;
                             case 'div': selector = '<div class="row">'; break;
                         }
                         break;
